# repositories-api

./: Dockerfile  Procfile  README.md  conftest.py  pyproject.toml
app/: __init__.py  crud.py  main.py  schemas.py  settings.py
tests/: test_app.py
tests/fixtures/: test_get_tops_with_all_languages.yaml  test_get_tops_with_from_date.yaml  test_get_tops_with_rate_limit_exceeded.yaml  test_get_tops_with_specific_language.yaml  test_get_tops_with_specific_limit_100.yaml  test_get_tops_with_specific_limit_50.yaml
